RESOLVED FIXED307774
[YARR] Fix false negative matching Unicode regexp with mixed BMP/non-BMP character class
https://bugs.webkit.org/show_bug.cgi?id=307774
Summary [YARR] Fix false negative matching Unicode regexp with mixed BMP/non-BMP char...
Sosuke Suzuki
Reported 2026-02-13 01:39:29 PST
...
Attachments
Sosuke Suzuki
Comment 1 2026-02-13 01:41:37 PST
EWS
Comment 2 2026-02-15 17:11:03 PST
Committed 307629@main (9fac4e438d23): <https://commits.webkit.org/307629@main> Reviewed commits have been landed. Closing PR #58612 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-15 17:12:12 PST
Note You need to log in before you can comment on or make changes to this bug.