[YARR] Fix false negative matching Unicode regexp with mixed BMP/non-BMP character class https://bugs.webkit.org/show_bug.cgi?id=307774

Reviewed by Yusuke Suzuki.

optimizeAlternative() swaps a CharacterClass term with a following
PatternCharacter term in Char8 mode even when the class contains non-BMP
characters. If JIT allocation then fails, the swapped pattern is passed to
byteCodeCompilePattern(). Executing that bytecode against a Char16 string
causes the interpreter to read a trail surrogate as errorCodePoint,
producing a false negative.

This patch fixes by restricting the Char8-mode swap to CharacterClasses
that contain only BMP characters.

Test: JSTests/stress/regexp-unicode-charclass-bmp-nonbmp-mixed.js

* JSTests/stress/regexp-unicode-charclass-bmp-nonbmp-mixed.js: Added.
(shouldBe):
(shouldMatch):
(shouldNotMatch):
(throw.new.Error):
* Source/JavaScriptCore/yarr/YarrJIT.cpp:

Canonical link: https://commits.webkit.org/307629@main